Update all moview routes and operations, add full types and schemas
